--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@vidstack/react": "^1.12.12",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
